force-app/main/default/objects/RoleFlat__c/RoleFlat__c.object-meta.xml
<CustomObject>
    <description>Role Hierarchy object with users flattened against specific role categories</description>
    <label>RoleFlat</label>
    <nameField>
        <displayFormat>A{0000000}</displayFormat>
        <label>RoleFlat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RoleFlats</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>