force-app/main/default/objects/RoleFlat__c/fields/ParentFlag__c.field-meta.xml
<CustomField>
    <fullName>ParentFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ParentFlag</label>
    <type>Checkbox</type>
</CustomField>