force-app/main/default/objects/RoleFlat__c/fields/SKeyID__c.field-meta.xml
<CustomField>
    <fullName>SKeyID__c</fullName>
    <description>Surrogate Key for the identification of the role records.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SKeyID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>