force-app/main/default/objects/RoleFlat__c/fields/UserActive__c.field-meta.xml
<CustomField>
    <fullName>UserActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UserActive</label>
    <type>Checkbox</type>
</CustomField>