force-app/main/default/objects/RoleFlat__c/fields/UserRoleID__c.field-meta.xml
<CustomField>
    <fullName>UserRoleID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserRoleID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>